src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>DP_ACT_STATE__c</fullName>
        <description>IMS COMMON - Situation of the activity state: Active, Closed, Decreased...</description>
        <label>IMS Activity State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Is.opening</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Reduced Activity</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Temp. Closed</fullName>
                </value>
                <value>
                    <fullName>Temp. Inactive</fullName>
                </value>
                <value>
                    <fullName>Temporarily Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_STATUS__c</fullName>
        <description>Stores Activity Status</description>
        <label>IMS Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ACT_WRK_STATUS__c</fullName>
        <description>Stores activity working status.</description>
        <label>IMS Activity Working Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Career Soldier</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                    <isActive>false</isActive>
                    <label>FT</label>
                </value>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                </value>
                <value>
                    <fullName>Military Hospital Intern</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Out Consultation</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Provisional substitute</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                    <isActive>false</isActive>
                    <label>PT</label>
                </value>
                <value>
                    <fullName>Regular Substitute</fullName>
                </value>
                <value>
                    <fullName>Regul Substitute</fullName>
                    <isActive>false</isActive>
                    <label>Regul Substitute</label>
                </value>
                <value>
                    <fullName>Unknown Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DP_ID__c</fullName>
        <description>IMS COMMON - This is the unique identifier provided by IMS for this Workplace.</description>
        <externalId>true</externalId>
        <label>IMS Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>BST_Check_value_of_Activity_status</fullName>
        <active>true</active>
        <description>Condition to check if any user other than Business admin has selected value as invalid</description>
        <errorConditionFormula>AND (NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) , ISPICKVAL(  DP_ACT_STATUS__c  , &apos;Invalid&apos;))</errorConditionFormula>
        <errorDisplayField>DP_ACT_STATUS__c</errorDisplayField>
        <errorMessage>Select Value Other Than Invalid</errorMessage>
    </validationRules>
</CustomObject>